--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"build": "tsc",
 		"update": "node ./scripts/update.js",
-        "gen": "node ./scripts/generate.js"
+        "gen": "node ./scripts/generate.js",
+        "validate": "node ./scripts/validate.js"
 	},
 	"author": "CENSOR_1337",
 	"license": "MIT",
