chore: `template.txt` is now `src/header.ts`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,11 @@
         "strict": true,
         "strictNullChecks": true,
         "skipLibCheck": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "dist",
+        "bin",
+        "src/header.ts"
+    ],
 }
