chore: rename `@fivemjs/natives` to `@cfx/natives`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@fivemjs/natives",
+	"name": "@cfx/natives",
 	"main": "dist/natives.js",
 	"module": "dist/natives.js",
 	"types": "dist/natives.d.ts",
