--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-	"name": "@cfx/natives",
+	"name": "cfx-natives",
 	"main": "dist/natives.js",
 	"module": "dist/natives.js",
 	"types": "dist/natives.d.ts",
+	"version": "1.0.1",
+	"description": "A list of game natives function for FiveM, using Alt:V native database.",
+	"keywords": [
+		"fivem",
+		"cfx",
+		"cfx-native",
+		"cfx.re"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/CENSOR1337/cfx-natives"
+	},
 	"scripts": {
 		"build": "tsc",
 		"update": "node ./scripts/update.js",
-        "gen": "node ./scripts/generate.js",
-        "validate": "node ./scripts/validate.js"
+		"gen": "node ./scripts/generate.js",
+		"validate": "node ./scripts/validate.js"
 	},
 	"author": "CENSOR_1337",
 	"license": "MIT",
